SAK-6764 Automatic updates of help content from IU KB
git-svn-id: https://source.sakaiproject.org/svn/chat/trunk@16884 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/chat-help/src/sakai_chat/ardp.html
+++ b/chat-help/src/sakai_chat/ardp.html
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<?xml version="1.0" encoding="UTF-8"?><!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html><head>
 <title>Creating a new chat
     room</title>
@@ -28,7 +27,7 @@ permissions, see <a href="content.hlp?docId=arax">Permissions and Roles: Overvie
 <p>If you have sufficient permissions, you can use the Chat Room tool
 to create multiple chat rooms within a course or project site. Though
 a site can have multiple chat rooms, only one can be displayed at a
-time. This feature essentially allows a site maintainer to archive old
+time. This feature essentially allows a site leader to archive old
 chats.</p>
 
 <p>To create a new chat room, follow these steps:</p>
