--- a/chat-help/src/sakai_chat/ardp.html
+++ b/chat-help/src/sakai_chat/ardp.html
@@ -21,7 +21,7 @@
 <p><strong>Note:</strong> To complete the procedures in this
 document, you must be assigned a role having the necessary
 permissions.  To determine your role, follow the directions in <a href="content.hlp?docId=arbu">Participant roles</a>.  For a
-basic understanding of roles and permissions, see <a href="content.hlp?docId=arax">Permissions and Roles: Overview</a>.</p>
+basic understanding of roles and permissions, see <a href="content.hlp?docId=arax">Permissions and roles: Overview</a>.</p>
 
 <p>If you have sufficient permissions, you can use the Chat Room tool
 to create multiple chat rooms within a course or project site. Though
