SAK-7580 Automatic updates of 2.4.x help content from IU KB
git-svn-id: https://source.sakaiproject.org/svn/chat/trunk@29737 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/chat-help/src/sakai_chat/ardp.html
+++ b/chat-help/src/sakai_chat/ardp.html
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?><!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html><head>
-<title>Creating a new chat
-    room</title>
+<title>Adding, editing, or deleting chat
+rooms</title>
 <style type="text/css">
 		/* Style for specific inline images */
 		
@@ -14,8 +14,20 @@
 </head>
 <body>
 <div class="helpBody">
-<h2>Creating a new chat
-    room</h2>
+<h2>Adding, editing, or deleting chat
+rooms</h2>
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 <p><strong>Note:</strong> To complete the procedures in this
@@ -24,27 +36,68 @@ permissions.  To determine your role, follow the directions in <a href="content.
 basic understanding of roles and permissions, see <a href="content.hlp?docId=arax">Permissions and roles: Overview</a>.</p>
 
 <p>If you have sufficient permissions, you can use the Chat Room tool
-to create multiple chat rooms within a course or project site. Though
-a site can have multiple chat rooms, only one can be displayed at a
-time. This feature essentially allows a site leader to archive old
-chats.</p>
+to add, edit, or delete chat rooms within a site. Also, you can choose
+which room loads by default when participants click <strong><code>Chat
+Room</code></strong>.</p>
 
-<p>To create a new chat room, follow these steps:</p>
+<h4>Adding a room</h4>
+
+<p>To add a room, follow these steps:</p>
 
 <ol><li>In the <a href="content.hlp?docId=arcc">menubar</a>, click <strong><code>Chat Room</code></strong>.  <br /><br />
 </li><li>Click <strong><code>Options</code></strong>.
+
 <br /><br />
-</li><li>Under "Which chat room will be displayed?", click the radio button
-beside <strong><code>Use a new Chat Room called</code></strong>, and type a name for the
-chat room in the accompanying text box.<br /><br />
-</li><li>Under "How many messages will be displayed?", select from the
-radio buttons to indicate how many messages you would like
-displayed.<br /><br />
-</li><li>Click <strong><code>Update Options</code></strong>.
+</li><li>Click <strong><code>Add Room</code></strong>.
+
+<br /><br />
+</li><li>Enter the chat room title and description in the text boxes.
+
+<br /><br />
+</li><li>Use the radio buttons to select how many previous messages to display. 
+
+<br /><br />
+</li><li>Click <strong><code>Update Options</code></strong>. Your new room will now appear under
+"Manage Rooms" in the list of available chat rooms. To make your new
+room appear by default when participants click <strong><code>Chat Room</code></strong>,
+click <strong><code>Set as Default</code></strong>.
 </li></ol>
 
+<h4>Editing a room</h4>
 
+<p>To edit a room's title, description, or number of messages
+displayed, follow these steps:</p>
+<ol><li>In the <a href="content.hlp?docId=arcc">menubar</a>, click <strong><code>Chat Room</code></strong>.  <br /><br />
+</li><li>Click <strong><code>Options</code></strong>.
+<br /><br />
+</li><li>Under the name of the room you wish to edit, click <strong><code>Edit</code></strong>.
+<br /><br />
+</li><li>Change the chat room title or description, or use the radio
+buttons to select how many previous messages to display.
 
+<br /><br />
+</li><li>When you are finished, click <strong><code>Update Options</code></strong>.
+</li></ol>
+
+<p><strong>Note:</strong> To change the room that loads by default
+when participants click <strong><code>Chat Room</code></strong>, in <strong><code>Options</code></strong>, under
+"Manage Rooms", find the room and click <strong><code>Set as Default</code></strong>.</p>
+
+<h4>Deleting a room</h4>
+
+<p>To delete a room, follow these steps:</p>
+
+<ol><li>In the <a href="content.hlp?docId=arcc">menubar</a>, click <strong><code>Chat Room</code></strong>.  <br /><br />
+</li><li>Click <strong><code>Options</code></strong>.
+
+<br /><br />
+</li><li>Under the name of the room you wish to delete, click
+<strong><code>Delete</code></strong>.
+
+<br /><br />
+</li><li>Under "Deleting chat room", to confirm the deletion, click
+<strong><code>Delete</code></strong>. Or, click <strong><code>Cancel</code></strong> to keep the room.
+</li></ol>
 
 
 </div>
