--- a/chat-help/src/sakai_chat/arcz.html
+++ b/chat-help/src/sakai_chat/arcz.html
@@ -14,7 +14,6 @@
 <body>
 <div class="helpBody">
 <h2>Chat Room: Overview</h2>
-
 <h3>What it does</h3>
 
 <p>You can use the Chat Room tool for real-time, unstructured
@@ -27,29 +26,26 @@ Chat as a space to have conversations across distances or catch up
 with conversations that they may have missed.</p>
 
 <h3>Key concepts</h3>
-<p><strong>Multiple rooms:</strong> The Chat Room tool allows for more
-than one room that a site owner (or anyone with the appropriate
-permissions) can create for specific kinds of conversation. These
-additional chat rooms can be created using the Options feature.</p>
 
-<p><strong>Display:</strong> Changes that a site owner makes to a chat
-room display using the <strong><code>Options...</code></strong> button also apply to how
-the Chat Room features appear to students.</p>
+<p><strong>Multiple rooms:</strong> Site leaders can use
+<strong><code>Options</code></strong> to add rooms to accommodate more than one
+discussion. Participants can click <strong><code>Change Room</code></strong> to access other
+discussions.</p>
+
+<p><strong>Display:</strong> Changes you make in <strong><code>Options</code></strong> also
+apply to how the Chat Room features appear to site participants.</p>
 
 <h3>Things to consider</h3>
-<ul><li>The Chat Room tool alerts users to the other participants who are
-also logged into the site and have entered the same chat room. This
-way, users know who is available to talk.  <br /><br />
-</li><li>Chat messages are saved and visible to all users so that all site
-participants can benefit from clarifying conversations and questions
-and answers. By default, all Chat messages are shown for at least
-three days.<br /><br />
+
+<ul><li>The Chat Room tool alerts users to other participants who have
+entered the same chat room. This way, users know who is available to
+talk.<br /><br />
+</li><li>All chat messages are archived and can be read by any site
+participant.  <br /><br />
 </li><li>The Chat Room tool does not provide a way to chat privately. By
 default, all messages are visible to all participants. However, you
 can remove read access for a particular role, and thereby for all
-participants with that role, by modifying the Chat Room permissions.<br /><br />
-
-</li><li>Only one chat room can be active at any given time.
+participants with that role, by modifying the Chat Room permissions.
 </li></ul>
 
 
