SAK-7580 Automatic updates of 2.4.x help content from IU KB
git-svn-id: https://source.sakaiproject.org/svn/chat/trunk@30020 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/chat-help/src/sakai_chat/arcv.html
+++ b/chat-help/src/sakai_chat/arcv.html
@@ -16,6 +16,28 @@
 <div class="helpBody">
 <h2>Reading, posting, or deleting Chat Room
   messages</h2>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 <p>On this page:</p>
 
 
@@ -31,7 +53,7 @@
 
 <p>To read messages in the Chat Room, do the following:</p>
 
-<ul><li>In the <a href="content.hlp?docId=arcc">menubar</a>, click <strong><code>Chat Room</code></strong>. <br /><br />
+<ul><li>In the <a href="content.hlp?docId=arcc">menubar</a>, click <strong><code>Chat Room</code></strong>. You will enter the default Chat Room specified by the Site Leader.  To change Chat Rooms, click <strong><code>Change Room</code></strong> at the top and select the room you would like to change to.<br /><br />
 </li><li>To see who is presently in the Chat Room, look under "Users in
 Chat" on the right side of the screen.<br /><br />
 </li><li>Messages appear in chronological order, with the most recent at
@@ -73,6 +95,7 @@ then click <strong><code>Delete</code></strong>.</p>
 
 <p><strong>Note:</strong> If you don't see a trash can icon, you don't
 have permission to delete the message.</p>
+
 
 </div>
 </body></html>
