NOJIRA Update help docs (synchronize with IU KB)
git-svn-id: https://source.sakaiproject.org/svn/chat/trunk@76949 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/chat-help/src/sakai_chat/arcz.html
+++ b/chat-help/src/sakai_chat/arcz.html
@@ -35,7 +35,7 @@
 <h3>What it does</h3>
 
 <p>You can use the Chat Room tool for real-time, unstructured
-conversations among site participants who are signed on to the site at
+conversations among site participants who are logged into the site at
 the same time.</p>
 
 <p>Instructors can easily create an "Online Office Hours" chat room for
