NOJIRA Update help docs (synchronize with IU KB)
git-svn-id: https://source.sakaiproject.org/svn/chat/branches/sakai-2.7.x@77064 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/chat-help/src/sakai_chat/arcz.html
+++ b/chat-help/src/sakai_chat/arcz.html
@@ -35,7 +35,7 @@
 <h3>What it does</h3>
 
 <p>You can use the Chat Room tool for real-time, unstructured
-conversations among site participants who are signed on to the site at
+conversations among site participants who are logged into the site at
 the same time.</p>
 
 <p>Instructors can easily create an "Online Office Hours" chat room for
@@ -76,14 +76,9 @@ can remove read access for a particular role, and thereby for all
 participants with that role, by modifying the Chat Room permissions.
 </li></ul>
 
+<h3>Help documentation</h3>
 
-
-
-
-
-
-
-
+<p>For help documentation about the Chat Room tool, see <a href="content.hlp?docId=arft">Chat Room</a>.</p>
 
 
 </div>
