--- a/chat-help/src/sakai_chat/ardp.html
+++ b/chat-help/src/sakai_chat/ardp.html
@@ -16,9 +16,9 @@ rooms</title>
 <div class="helpBody">
 <h2>Adding, editing, or deleting chat
 rooms</h2>
-<p><strong>Note:</strong> To complete these procedures, you
-must be assigned a role having the necessary permissions.  To
-determine your role, follow the directions in <a href="content.hlp?docId=arbu">Participant roles</a>.  For a basic understanding of roles and
+<p><strong>Note:</strong> To complete these procedures, you must be
+assigned a role having the necessary permissions.  To determine your
+role, follow the directions in <a href="content.hlp?docId=arbu">Participant roles</a>.  For a basic understanding of roles and
 permissions, see <a href="content.hlp?docId=arax">Permissions and roles: Overview</a>.</p>
 
 <p>You can use the Chat Room tool to add, edit, or delete chat rooms
