NOJIRA Update help docs (synchronize with IU KB)
git-svn-id: https://source.sakaiproject.org/svn/chat/trunk@86659 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/chat-help/src/sakai_chat/arcv.html
+++ b/chat-help/src/sakai_chat/arcv.html
@@ -16,26 +16,11 @@
 <div class="helpBody">
 <h2>Reading, posting, or deleting Chat Room
   messages</h2>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 <p>On this page:</p>
 
 
 
-<ul><li><a href="#read">Reading Chat Room messages</a></li><li><a href="#post">Posting Chat Room messages</a></li><li><a href="#delete">Deleting Chat Room messages</a>
-</li></ul>
+<ul><li><a href="#read">Reading Chat Room messages</a></li><li><a href="#post">Posting Chat Room messages</a></li><li><a href="#delete">Deleting Chat Room messages</a></li></ul>
 
 <hr />
 
@@ -47,8 +32,8 @@
 
 <ul><li>In the <a href="content.hlp?docId=arcc">menubar</a>, click <strong><code>Chat Room</code></strong>. You will
 enter the default room (as specified by the site leader).  To change
-rooms, click <strong><code>Change Room</code></strong> at the top, and select the room you'd like
-to enter.
+rooms, click <strong><code>Change Room</code></strong> at the top, and select the room you'd
+like to enter.
 
 <br /><br />
 </li><li>To see who is presently in the room, look under "Users in Chat" on
@@ -62,12 +47,14 @@ the bottom. Messages will always identify the sender.
 </li><li>To hide or display the date or time messages were posted, select
 the appropriate option from the "View" drop-down list: <strong><code>Time
 Only</code></strong>, <strong><code>Date and Time</code></strong>, <strong><code>Date Only</code></strong>, <strong><code>Neither
-Date nor Time</code></strong>, or <strong><code>ID only</code></strong>.
+Date nor Time</code></strong>, or <strong><code>ID Only</code></strong>.
 
 <br /><br />
-</li><li>To limit the list to messages from only the past three days, click
-<strong><code>Past 3 days</code></strong>. To return to a view listing all messages, click
-<strong><code>All Messages</code></strong>.
+</li><li>To change how many messages you see, from the second drop-down
+list, select one of the following options: <strong><code>All Messages</code></strong>,
+<strong><code>Last 10 messages</code></strong>, <strong><code>Past 3 days</code></strong>, or <strong><code>Show no message
+history</code></strong>.  (If you choose <strong><code>Show no message history</code></strong>, you will 
+see only messages posted after you made this selection.)
 </li></ul>
 
 <a name="post"> </a>
@@ -82,9 +69,9 @@ Date nor Time</code></strong>, or <strong><code>ID only</code></strong>.
 </li><li>In the text box at the bottom of the window, type your message,
 and then click <strong><code>Add message</code></strong>. 
 
-<p><strong>Note:</strong> No one will be able to see your message
+<p><strong>Note:</strong> No one can see your message
 until you click <strong><code>Add message</code></strong>, but once you do, only an
-instructor or a participant who has special permission can delete your
+instructor or a participant with special permission can delete your
 message.</p>
 </li><li>To discard a message that you haven't sent yet, click
 <strong><code>Clear</code></strong>.
@@ -104,7 +91,6 @@ have permission to delete the message.</p>
 <p>To permanently delete all messages from a chat room, click
 <strong><code>Options</code></strong>, and then click <strong><code>Clear History</code></strong>. Click
 <strong><code>Delete</code></strong> to confirm.</p>
-
 
  
 </div>
