NOJIRA Update help docs (synchronize with IU KB)
git-svn-id: https://source.sakaiproject.org/svn/chat/trunk@86729 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/chat-help/src/sakai_chat/ardp.html
+++ b/chat-help/src/sakai_chat/ardp.html
@@ -29,7 +29,9 @@ participants click <strong><code>Chat Room</code></strong>.</p>
 
 <p>To add a room:</p>
 
-<ol><li>In the <a href="content.hlp?docId=arcc">menubar</a>, click <strong><code>Chat Room</code></strong>.  <br /><br />
+<ol><li>In the <a href="content.hlp?docId=arcc">menubar</a>, click <strong><code>Chat Room</code></strong>.  
+
+<br /><br />
 </li><li>Click <strong><code>Options</code></strong>.
 
 <br /><br />
@@ -72,10 +74,15 @@ click <strong><code>Set as Default</code></strong>.
 
 <p>To edit a room's title, description, or number of messages
 displayed:</p>
-<ol><li>In the <a href="content.hlp?docId=arcc">menubar</a>, click <strong><code>Chat Room</code></strong>.  <br /><br />
+
+<ol><li>In the <a href="content.hlp?docId=arcc">menubar</a>, click <strong><code>Chat Room</code></strong>.  
+
+<br /><br />
 </li><li>Click <strong><code>Options</code></strong>.
+
 <br /><br />
 </li><li>Under the name of the room you wish to edit, click <strong><code>Edit</code></strong>.
+
 <br /><br />
 </li><li>Change the chat room title or description, or use the radio
 buttons to select how many previous messages to display.
@@ -92,7 +99,9 @@ when participants click <strong><code>Chat Room</code></strong>, in <strong><cod
 
 <p>To delete a room:</p>
 
-<ol><li>In the <a href="content.hlp?docId=arcc">menubar</a>, click <strong><code>Chat Room</code></strong>.  <br /><br />
+<ol><li>In the <a href="content.hlp?docId=arcc">menubar</a>, click <strong><code>Chat Room</code></strong>.  
+
+<br /><br />
 </li><li>Click <strong><code>Options</code></strong>.
 
 <br /><br />
@@ -100,12 +109,8 @@ when participants click <strong><code>Chat Room</code></strong>, in <strong><cod
 <strong><code>Delete</code></strong>.
 
 <br /><br />
-</li><li>Under "Deleting chat room", to confirm the deletion, click
-<strong><code>Delete</code></strong>. To keep the room, click <strong><code>Cancel</code></strong>.
+</li><li>Confirm the deletion by clicking <strong><code>Delete</code></strong> again.
 </li></ol>
-
-
-
 
 </div>
 </body></html>
