SAK-22538, help files for trunk (reporter has tested they're valid)
git-svn-id: https://source.sakaiproject.org/svn/chat/trunk@112086 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/chat-help/src/sakai_chat/arcv_pt_BR.html
+++ b/chat-help/src/sakai_chat/arcv_pt_BR.html
@@ -1,3 +1,4 @@
+<!-- Translated by: LARC: Laboratory of Computer Architecture and Networks - USP - University of Sao Paulo - Sao Paulo, Brazil --> 
 <?xml version="1.0" encoding="UTF-8"?><!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html><head>
 <title>Reading, posting, or deleting Chat Room
@@ -36,7 +37,7 @@ no topo da tela, e selecione a sala para a qual você deseja se mudar.<br />
 <br />
 </li>
 <li>Para ver quem está presente na sala de Bate-Papo, veja em
-"Usuários no Bate-Papo" à direita da tela.<br />
+"Usuários no Bate-Papo" a direita da tela.<br />
 <br />
 </li>
 <li>As mensagens aparecerao em ordem cronológica, com a mais
@@ -54,7 +55,7 @@ ou <strong><code>Nem data nem Horário</code></strong>.<br />
 </li>
 <li>Para limitar a lista para apenas mensagens dos últimos três
 dias, clique em <strong><code>Últimos 3 Dias</code></strong>.
-Para retornar à lista de todas as mensagens, clique em <strong><code>Todas
+Para retornar à  lista de todas as mensagens, clique em <strong><code>Todas
 as Mensagens</code></strong>.
 </li>
 </ul>
@@ -84,7 +85,7 @@ enviado, clique em <strong><code>Limpar</code></strong>.
 <h3>Apagar mensagens do Bate-Papo</h3>
 <p>Para apagar uma mensagem do Bate-Papo que você tenha permissão
 suficiente para apagar, simplesmente clique no ícone da lixeira
-próximo à mensagem, e clique em <strong><code>Apagar</code></strong>.</p>
+próximo a  mensagem, e clique em <strong><code>Apagar</code></strong>.</p>
 <p><strong>Observação:</strong> Se você não vir um ícone
 de lixeira, você não possui permissão para apagar a mensagem.</p>
 
