--- a/chat-help/src/sakai_chat/arcz_pt_BR.html
+++ b/chat-help/src/sakai_chat/arcz_pt_BR.html
@@ -1,3 +1,4 @@
+<!-- Translated by: LARC: Laboratory of Computer Architecture and Networks - USP - University of Sao Paulo - Sao Paulo, Brazil --> 
 <?xml version="1.0" encoding="UTF-8"?><!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html><head>
 <title>Chat Room: Overview</title>
@@ -16,13 +17,13 @@
 <h2>Bate-Papo: Resumo</h2>
 <h3>Para quê serve</h3>
 
-<p>Você pode utilizar a ferramenta Bate-Papo para conversações em tempo
+<p>Você pode utilizar a ferramenta Bate-Papo para conversas em tempo
 real e sem estrutura, entre participantes do site que esteja logados no
 site ao mesmo tempo.</p>
 
 <p>Os coordenadores podem facilmente criar uma sala de Bate-Papo
 "Horários Online" para responder perguntas de alunos. Grupos de
-colaboração dispersos podem utilizar o Bate-Papo como um espaço para
+colaboração dispersos podem utilizar o Bate-Papo como um espaÃ§o para
 realizar conversas a distância ou se atualizar com conversas que eles
 possam ter perdido.</p>
 
@@ -44,7 +45,7 @@ sabem quem está disponível para conversar.<br /><br />
 <li>A ferramenta Bate-Papo não fornece um modo de conversa privada.
 Como padrão, todas as mensagens são visíveis a todos os participantes.
 No entanto, você pode remover acesso de leitura para um papel em
-particular, e conseqüentemente para todos os participantes com aquele
+particular, e consequentemente para todos os participantes com aquele
 papel, modificando as permissões do Bate-Papo.
 </li></ul>
 
