--- a/chat-help/src/sakai_chat/arft_pt_BR.html
+++ b/chat-help/src/sakai_chat/arft_pt_BR.html
@@ -1,3 +1,4 @@
+<!-- Translated by: LARC: Laboratory of Computer Architecture and Networks - USP - University of Sao Paulo - Sao Paulo, Brazil --> 
 <?xml version="1.0" encoding="UTF-8"?><!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html><head>
 <title>Chat Room</title>
@@ -16,7 +17,7 @@
 <h2>Bate-Papo</h2>
 <h3>Visão Geral</h3>
 
-<p>Você pode utilizar a ferramenta Bate-Papo para conversações em tempo
+<p>Você pode utilizar a ferramenta Bate-Papo para conversas em tempo
 real e sem estrutura, entre participantes do site que esteja logados no
 site ao mesmo tempo. <a href="content.hlp?docId=arcz_pt_BR">Mais...</a></p>
 
